fix: mobile footer bottombar z-index

--- a/site/styles/layouts/bg-img.css
+++ b/site/styles/layouts/bg-img.css
@@ -17,14 +17,12 @@
   object-position: center;
   min-inline-size: 100%;
   min-block-size: 100%;
-  z-index: 0;
   border-radius: 0;
 }
 
 .bg-img > :not(img, svg, picture, video) {
   grid-column: 1;
   grid-row: 1;
-  z-index: 1;
 }
 
 .bg-img .filter {
